tests/baselines/reference/partialType3.errors.txt
tests/cases/compiler/partialType3.ts(11,1): error TS2322: Type 'false' is not assignable to type 'string | number'.
tests/cases/compiler/partialType3.ts(12,1): error TS2322: Type 'false' is not assignable to type 'string | number'.


==== tests/cases/compiler/partialType3.ts (2 errors) ====
    interface State1 {
        name: string;
        length: number;
        [key: string]: string | number;
    }
    
    const subs: partial State1 = {};
    subs['foo'] = 32;
    subs['bar'] = 'ok';
    // Errors
    subs['err'] = false;
    ~~~~~~~~~~~
!!! error TS2322: Type 'false' is not assignable to type 'string | number'.
    subs[12] = false;
    ~~~~~~~~
!!! error TS2322: Type 'false' is not assignable to type 'string | number'.
    